--- a/L6.rnw
+++ b/L6.rnw
@@ -42,12 +42,17 @@ rm(HANDOUT)
 
 \begin{document} % >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
+% \frame{ % -------------------------------------------------------------------->
+% \begin{center}
+% \begin{figure}
+% \includegraphics[scale=0.45]{pics/Karl_Pearson_2.jpg}
+% \caption{Karl Pearson introduced the $\chi^2$-test in ''On the Criterion that a Given System of Deviations from the Probable in the Case of a Correlated System of Variables is such that it can be Reasonably Supposed to have Arisen from Random Sampling'' (1900) }
+% \end{figure}
+% \end{center}
+% }
 \frame{ % -------------------------------------------------------------------->
 \begin{center}
-\begin{figure}
-\includegraphics[scale=0.45]{pics/Karl_Pearson_2.jpg}
-\caption{Karl Pearson introduced the $\chi^2$-test in ''On the Criterion that a Given System of Deviations from the Probable in the Case of a Correlated System of Variables is such that it can be Reasonably Supposed to have Arisen from Random Sampling'' (1900) }
-\end{figure}
+\includegraphics[scale=0.5]{pics/Betting-Odds.jpg}
 \end{center}
 }
 \frame{ % -------------------------------------------------------------------->
@@ -123,7 +128,7 @@ Odds of bleeding
 \frame{ % -------------------------------------------------------------------->
 \frametitle{Odds}
 For an event with probability $p$, the odds is $p/(1-p)$.
-<<odds_1>>=
+<<odds_1, fig.height=5>>=
 par(mar=c(4,4,1,1), "ylog"=TRUE)
 curve(x/(1-x), from=0, to=1, ylab="Odds", xlab="Probability", lwd=2,
    cex.lab=1.5, las=1, yaxp=c(0,100,4))
